# elkhantour_project

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  python-app.yml
docs/: _toc.yml  index.md  myst.yml
docs/01-Installation/: index.md
docs/02-Running/: index.md
docs/03-Outputs/: index.md  interactive_plots.ipynb
src/cwas_rsfmri/: __init__.py  connectome.py  features.py  files.py  phenotype.py  plots.py  reject_fd_qc.py  run.py  stats.py  subject.py  workflow.py
src/cwas_rsfmri/tests/: test_cli.py
src/cwas_rsfmri/tests/data/bids/: example_atlas.tsv
src/cwas_rsfmri/tests/data/bids/output/: cwas_NDD_HC_rsfmri_denoiseSimple_example_atlas_fdr_corrected_pvalues.tsv  cwas_NDD_HC_rsfmri_denoiseSimple_example_atlas_standardized_betas.tsv
src/cwas_rsfmri/utils/: connectome.py  files.py  phenotype.py  reject_fd_qc.py  subject.py
